--- a/index.html
+++ b/index.html
@@ -9,12 +9,48 @@
 	<meta name="description" content="A simple HTML5 Template for new projects.">
 	<meta name="author" content="SitePoint">
 
-	<script type="module" src="index.js"></script>
+
 	<link rel="stylesheet" href="index.css?v=1.0">
 
 </head>
 
 <body>
+    <header>
+        <nav>
+            <h1>Awesome Books</h1>
+            <ul>
+                <li id="list" class="list active">List</li>
+                <li id="add" class="add">Add New</li>
+                <li id="contact" class="contact">Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <section id="awesome-books">
+        <h2>All awesome books</h2>
+    </section>
+    <div id="row" class="row"></div>
+    <h3 class="form-title" id="form-title">Add a new book</h3>
+    <form id="form">
+        <input type="text" id="title" name="title" placeholder="Title" /><br>
+        <input type="text" id="author" name="author" placeholder="Author" /><br>
+        <button type="submit" id="btn-add">Add</button>
+    </form>
+
+    <section id="section-contact" class="section-contact">
+        <h2>Contact Information</h2>
+        <p>Do have any questions or you just want to say "Hello"?<br> You Can reach out to us!</p>
+        <ul>
+            <li>Our e-mail mail@gmail.com</li>
+            <li>Our phone number: 00443586534422</li>
+            <li>Our address Streetname: city, country</li>
+        </ul>
+    </section>
+
+    <footer>
+        <h4>Copyright...</h4>
+    </footer>
+
+    <script type="module" src="index.js"></script>
 
 </body>
 </html>
