INSERT DATE TIME USING LUXON MODULE

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li id="contact" class="contact">Contact</li>
             </ul>
         </nav>
+        <p>Date: </p>
     </header>
     <section id="awesome-books">
         <h2>All awesome books</h2>
